--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,7 @@ h4{
 	background: rgba(0, 0, 0, 0.2);
 	border-radius: 50%;
 	width: 50px;
+	transition: all .4s;
 }
 .header-icon a i{
 width: 40px;
